Fix overflow of video overlay

--- a/assets/scss/base/layout.scss
+++ b/assets/scss/base/layout.scss
@@ -409,6 +409,14 @@
   }
 }
 
+.silentbox-is-opened {
+  .ss-media-holder {
+    #silentbox-group {
+      overflow: visible;
+    }
+  }
+}
+
 .ss-recommendations-holder {
   overflow-x: scroll;
   -webkit-overflow-scrolling: touch;
